[css-contain] Size containment should ignore contents in flexbox/grid

The spec is pretty clear
(https://drafts.csswg.org/css-contain/#containment-size):
  "1. When laying out the containing element,
  it must be treated as having no contents."

The patch modifies ComputeIntrinsicLogicalWidths() and
FirstLineBoxBaseline() in LayoutFlexibleBox and LayoutGrid,
so the contents are ignored if the flex or grid container
has "contain: size".
Buttons are implemented as flexboxes internally,
so they get fixed too thanks to this change.

BUG=850169
TEST=external/wpt/css/css-contain/contain-size-button-001.html
TEST=external/wpt/css/css-contain/contain-size-flexbox-001.html
TEST=external/wpt/css/css-contain/contain-size-grid-001.html

Change-Id: Ia08c2c7b31126911cb4f0d1fc70aa444c22af8e3
Reviewed-on: https://chromium-review.googlesource.com/1093854
Commit-Queue: Manuel Rego Casasnovas <rego@igalia.com>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566228}
Former-commit-id: 2d2551f9932f4407d1dcee7eb16cc7a9d8ff936c